# smartcalc-tui

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  watch-upstream.yml
src/: calculate.rs  lib.rs  main.rs  prompt.rs  spinner.rs  syntax.rs  thread_loop.rs
